--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="d-flex justify-content-center align-content-center">
-            <div class="card mt-5 w-75">
+            <div class="card w-75">
                 <div class="card-title text-center bg-info">
                     <div class="row mt-3">
                         <div class="col-4">
