send msg all done

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-10">
-                            <textarea name="" id="inputMsg" cols="30" rows="1" class="form-control" placeholder="Write a Message"></textarea>
+                            <!-- <textarea name="" cols="30" rows="1" id="inputMsg" class="form-control" placeholder="Write a Message"></textarea> -->
+                            <input type="text" id="inputMsg" class="form-control" placeholder="Write a Message" />
                         </div>
                         <div class="col-2">
-                            <button class="btn btn-info">Send</button>
+                            <button class="btn btn-info sendMsgBtn">Send</button>
                         </div>
                     </div>
                 </div>
