--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="chat.png" type="image/x-icon">
     <title>Realtime Chat App</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -18,7 +19,7 @@
                             <img class="img-fluid w-25" src="chat.png" alt="">
                         </div>
                         <div class="col-8">
-                            <h3>Welcome to Chatting App</h3>
+                            <h3 class="userTitle">Welcome to Chatting App</h3>
                         </div>
                     </div>
                 </div>
