connected msg shown

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     </div>
                 </div>
                 <div class="card-body msgArea">
+                    <!-- <div class="connected">
+                        <h6>user1 connected</h6>
+                    </div> -->
                     <!-- <div class="msg incoming">
                         <h5>user 1</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quibusdam consequatur officiis sapiente. Atque, consequatur vitae assumenda perferendis, doloremque debitis aliquam pariatur dicta cupiditate autem, inventore dolorum ex quia commodi?</p>
